# Changelog

## [] - future work

- Added Deb package building for future apt-get package, follow debian policy

## [1.1.0] - 2025-10-20

Second version, with added quality of life features and general radio controls using soupySDR.

### Added
- Added live spectrum movement interactions arrows, f, r, +, -, refresh rate, c, x, i, o, z.
- Added attack/decay of spectrum values
- Added modular parse/input modules, updated readme
- Added phosphor effect in spectrum
- Added iqfile mode and example
- Added SNR calculation

### Changed
- Fixed correct scaling, fft/fft_length
- Set min-max db per default
- Updated link to release in readme file
- Added color freq and time derivate



TODO:
- Added documentation about creation of parsing-modules


hw-
- Added example sweeping rtl-sdr 
- Added soupy-sdr controls
- Added tcp support for rtl_tcp
- gnuradio example




## [1.0.0] - 2025-10-01

First notable version, ready for deployment and evaluation.

### Added
- Terminal-based spectrum and waterfall display
- Support for VITA-49, raw IQ, and simulated streams
- Auto-zoom to signal regions
- Bar and line mode spectrum
- Optional saving/loading of IQ data
