@@ -65,7 +65,7 @@ TSpec.exe --color-waterfall --color-spectrum --colormap inferno --spectrum-symbo
 
 Using custom color themes and line graph with set refresh rate:
 ```bash
-TSpec.exe --color-waterfall --color-waterfall --color-spectrum --colormap inferno --spectrum-symbol " " --spectrum-symbol-color-background --format raw  --line-width 3 --line --format raw   --colormap custom --custom-colormap "#000000,#aa0000,64" --refresh-rate 10
+TSpec.exe --color-waterfall  --color-spectrum --colormap inferno --spectrum-symbol " " --spectrum-symbol-color-background --format raw  --line-width 3 --line --format raw   --colormap custom --custom-colormap "#000000,#aa0000,64" --refresh-rate 10
 ```
 
 Using example modules:
