@@ -1,0 +1,12 @@
+# Install Core
+sudo apt update
+sudo apt install libsoapysdr-dev soapysdr-tools soapysdr-module-all
+
+# Driver
+sudo apt install soapysdr-module-rtlsdr
+
+# Test
+SoapySDRUtil --info
+
+# python paket
+sudo apt install python3-soapysdr
